--- a/gallery.html
+++ b/gallery.html
@@ -69,70 +69,26 @@
             <div class="container-lg bg-dark display-6">
                 <div class="row justify-content-center align-items-center">
                     <div class="col-lg-8 col-md-5 text-center text-white mt-3 rounded border">
-                        <img class="mt-4 mb-3" src="myPhoto/facebook-account.jpg" alt="facebook-account" width="350">
+                        <img class="mt-4 mb-3" src="myPhoto/facebook-account-2.png" alt="facebook-account" width="350">
                         <div class="text-start">
                             <h4 class="fw-bold">1. Facebook</h4>
-                            <i class="lead my-4">G: Wah gila artis</i>
-                            <p class="lead my-4">Baru juga dapat 1k awal maret kemarin(* ￣︿￣)</p>
+                            <p class="lead my-4">Dapat 2k dalam waktu 6 bulan. Mantaplah</p>
                         </div>
                     </div>
                 </div>
                 <div class="row justify-content-center align-items-center">
                     <div class="col-lg-8 col-md-5 text-center text-white mt-3 rounded border">
-                        <img class="mt-4 mb-3" src="myPhoto/mobile-legends-account.jpg" alt="mobile-legends-account" width="350">
+                        <img class="mt-4 mb-3" src="myPhoto/blue-archive-account-3.png" alt="blue-archive-account" width="350">
                         <div class="text-start">
-                            <h4 class="fw-bold">2. Mobile Legends</h4>
-                            <i class="lead my-4">G: Kok kamu gak pernah glory bang?</i>
-                            <p class="lead my-4">Mwehe... Gua sering nguji mental dengan ngepush di penghujung season</p>
-                            <button id="copyButtonML" class="btn text-white mb-4 border rounded">738555334 <i class="bi bi-clipboard" id="iconToggle"></i></button>
-                        </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-lg-8 col-md-5 text-center text-white mt-3 rounded border">
-                        <img class="mt-4 mb-3" src="myPhoto/blue-archive-account.jpg" alt="blue-archive-account" width="350">
-                        <div class="text-start">
-                            <h4 class="fw-bold">3. Blue Archive</h4>
-                            <p class="lead my-4">Say the line!!!</p>
-                            <i class="lead my-4">G: Gold looks better anyway, Aruji-dongo</i><br>
+                            <h4 class="fw-bold">2. Blue Archive</h4>
+                            <p class="lead my-4">Kecewa le nggak jadi dapat Platinum pertama kemarin. Tau gini gua Malding (。﹏。*)</p>
                             <button id="copyButtonBA" class="btn text-white mt-4 mb-4 border rounded">AYVBWNGY <i class="bi bi-clipboard" id="iconToggle"></i></button>
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-lg-8 col-md-5 text-center text-white mt-3 rounded border">
-                        <img class="mt-4 mb-3" src="myPhoto/guardian-tales-account.jpg" alt="guardian-tales-account" width="350">
-                        <div class="text-start">
-                            <h4 class="fw-bold">4. Guardian Tales</h4>
-                            <p class="lead my-4">Selain jadi Sensei di BLue Archive, gua juga jadi Guardian di GT</p>
-                            <button id="copyButtonGT" class="btn text-white mb-4 border rounded">#YW74D3 <i class="bi bi-clipboard" id="iconToggle"></i></button>
-                        </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center align-items-center pb-5">
-                    <div class="col-lg-8 col-md-5 text-center text-white mt-3 rounded border">
-                        <img class="mt-4 mb-3" src="myPhoto/free-fire-account.jpg" alt="free-fire-account" width="350">
-                        <div class="text-start">
-                            <h4 class="fw-bold">5. Free fire</h4>
-                            <i class="lead my-4">G: .....</i>
-                            <p class="lead my-4">Don't judge me(* ￣︿￣)</p>
-                            <button id="copyButtonFF" class="btn text-white mb-4 border rounded">487339555 <i class="bi bi-clipboard" id="iconToggle"></i></button>
-                        </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center align-items-center pb-5">
-                    <div class="col-lg-8 col-md-5 text-center text-white mt-3 rounded border">
-                        <img class="mt-4 mb-3" src="myPhoto/clash-of-clan-account.jpg" alt="clash-of-clan-account" width="350">
-                        <div class="text-start">
-                            <h4 class="fw-bold">5. Clash of Clans</h4>
-                            <i class="lead my-4"></i>
-                            <p class="lead my-4"></p>
-                            <button id="copyButtonCOC" class="btn text-white mb-4 border rounded">#QOVJO2PGC <i class="bi bi-clipboard" id="iconToggle"></i></button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </main>
+
+            </main>
+        <p class="text-white text-center">(Bjirlah gua sekarang jarang main game lagi🗿)</p>
 
         <p class="text-white text-center">Yaa... sebenarnya sih kalo kalian gak mau repot tinggal add aja facebook gua.
             <br>Soalnya kebanyakan akun gua terhubung dengan facebook tuh. Jadinya mudah buat nyari teman</p><br>
